--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-react-app": "^1.0.2",
     "nodemon": "^1.11.0",
-    "react-scripts": "1.0.7"
+    "react-scripts": "1.0.7",
+    "redux-devtools-extension": "^2.13.2"
   },
   "scripts": {
     "start": "react-scripts start",
