--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "express": "^4.15.3",
     "express-session": "^1.15.4",
     "mongoose": "^4.11.1",
-    "morgan": "^1.8.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.6.1",
@@ -29,6 +28,7 @@
     "babel-eslint": "^7.2.3",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "cross-env": "^5.0.1",
     "enzyme": "^2.9.1",
     "eslint": "^3.19.0",
@@ -38,6 +38,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-react-app": "^1.0.2",
+    "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
     "react-scripts": "1.0.7",
     "redux-devtools-extension": "^2.13.2"
