--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.15.3",
     "mongoose": "^4.11.1",
     "react": "^15.6.1",
+    "react-burger-menu": "^2.1.4",
     "react-dnd": "^2.4.0",
     "react-dnd-html5-backend": "^2.4.1",
     "react-dom": "^15.6.1",
